--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -13,7 +13,7 @@
         <main>
             {% block content %}{% endblock %}
         </main>
-
+        <img src="../static/images/Robot.png" class="imgRobot"/>
         <footer>
             <p>© 2025 Sistema de Detección de Fraudes - Versión 1.0</p>
         </footer>
