--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -253,3 +253,9 @@ footer {
     justify-content: center;
     z-index: -999;
 }
+
+.imgRobot {
+    position: absolute;
+    top: 59vh;
+    filter: blur(3px);
+}
