--- a/core/templates/transactions.html
+++ b/core/templates/transactions.html
@@ -208,7 +208,7 @@ function showFraudAlert(transaction) {
 
     .btn-primary {
         font-size: .8rem;
-        height: 3dvh;
+        height: 3%;
         margin-top: 3%;
         font-weight: bold;
     }
